[build-system]
requires = ["hatchling<1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-leadsclean"
version = "0.1.1"
description = "Open-source MCP Server for B2B lead intelligence extraction. Works with Claude Desktop, Cursor, and any MCP client."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edition", email = "edition.cai@gmail.com" }]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "ai-agent",
    "lead-extraction",
    "b2b-intelligence",
    "claude-desktop",
    "llm-tools",
    "reference-implementation",
    "gdpr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "openai==1.68.2",
    "anthropic>=0.40.0",
    "pydantic==2.11.1",
    "python-dotenv==1.0.1",
    "mcp>=1.6.0",
]

[project.scripts]
mcp-leadsclean = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/edition/leadsclean"
Repository = "https://github.com/edition/leadsclean"
Issues = "https://github.com/edition/leadsclean/issues"

[tool.hatch.build.targets.wheel]
include = ["mcp_server.py", "core.py", "main.py"]
